--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!--External CDN script imports-->
     <script src="./js/jquery-3.1.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyAdp3O-uxOmY4vd7k8EfCfcg_cLYooZhOw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyAdp3O-uxOmY4vd7k8EfCfcg_cLYooZhOw"
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
 </head>
@@ -92,19 +93,14 @@
             <div class="modal-body">
 
 
-                <h6 style="display: block">Key</h6>
-                <dl>
-                    <dd><img src="icon.png"></dd>
-                    <dt>Predefined locations on map</dt>
-                    <dd><i class="fa fa-question-circle fa-2x"></i></dd>
-                    <dt>Click for help</dt>
-                    <dd><i class="fa fa-times-circle fa-2x"></i></dd>
-                    <dt>Close/Exit the application</dt>
-                    <dd><img src="Marker-48.png"></dd>
-                    <dt>Current location. <span
-                            style="color: tomato; font-weight: bold">NB: May not be 100% accurate</span>
-                    </dt>
-                </dl>
+                <h6 style="display: block; text-align: center">Key</h6>
+                <ol>
+                    <li><img src="icon.png"> => Predefined locations on map</li>
+                    <li><i class="fa fa-question-circle fa"></i> => Click for help</li>
+                    <li><i class="fa fa-times-circle fa"></i> => Close/Exit the application</li>
+                    <li><img src="Marker-48.png"> => Current location. <span style="color: tomato; font-weight: bold">
+                        NB: May not be 100% accurate</span> </li>
+                </ol>
 
 
             </div>
